fixed pixel alignment

--- a/src/viewcomponents/HomeView.css
+++ b/src/viewcomponents/HomeView.css
@@ -51,7 +51,7 @@
     background-image:radial-gradient(to bottom, #bbeaf0, #bbeaf0, #58D0F2, #0f92e4);
     border-radius: 1%;
     min-height: 605px;
-    margin-top: -1px;
+   
 }
 
 .week-topic{
@@ -86,8 +86,9 @@
     box-shadow: 3px 3px 2px grey;
     border:  none;
     font-weight: bold;
+    margin-top: -3px;
 }
 
 .quiz-button:hover{
     background-image:linear-gradient(to right,  #cf9610, #FFCD57);
-}
+    }
